tests/paczka1/small_fuzzy/86619726.err
Error in line 4: eQS6cd S344 36,7
Error in line 1: 2c1Q A931 56,7
Error in line 12: P1I2 S124 3,9
